# DaltonLens-Python

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
.github/workflows/: unit_tests.yml
daltonlens/: __init__.py  cmfs.py  convert.py  generate.py  geometry.py  main.py  simulate.py  utils.py
research/: FieldOfView.ipynb  README.md  references.bib  rgbspan.ipynb
research/for-desktop/: precomputed_matrices.ipynb  precomputed_matrices_gmic.ipynb
research/for-svg/: precomputed_for_svg.ipynb
research/understanding-simulations/: Analyzing_Gimp_Vischeck.ipynb  SimulationComparison.ipynb  UnderstandingColorBlindness.ipynb  rgb_xyz_judd.ipynb
research/understanding-simulations/colour-science/: run_colour_machado.py
tests/: test_convert.py  test_generate.py  test_simulate.py
