[metadata]
# replace with your username:
name = daltonlens
version = 0.1.2
author = Nicolas Burrus
author_email = nicolas@burrus.name
description = Utility to help colorblind people by providing color filters and highlighting tools.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DaltonLens/DaltonLens-Python
project_urls =
    Bug Tracker = https://github.com/DaltonLens/DaltonLens-Python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy
    Pillow

[options.entry_points]
console_scripts =
    daltonlens-python = daltonlens:main

[options.package_data]
daltonlens = data/mask*.png
