[metadata]
# replace with your username:
name = daltonlens
version = 0.1.5
author = Nicolas Burrus
author_email = nicolas@burrus.name
description = Utility to help colorblind people by providing color filters and highlighting tools.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DaltonLens/DaltonLens-Python
project_urls =
    Bug Tracker = https://github.com/DaltonLens/DaltonLens-Python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
# This might be conflicting with options.package_data and the MANIFEST.in
# https://stackoverflow.com/questions/7522250/how-to-include-package-data-with-setuptools-distutils
include_package_data = True
setup_requires = setuptools_git
install_requires =
    numpy
    Pillow

[options.entry_points]
console_scripts =
    daltonlens-python = daltonlens:main

# See the comment about include_package_data above 
# [options.package_data]
# daltonlens = data/mask*.png
